--- a/test/index.html
+++ b/test/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ES6模块</title>
+    <title>测试</title>
+    <script src="../dist/xqtime.min.js"></script>
 </head>
 <body>
-    <script type="module">
-        import xqtime from '../lib/xqtime-es6.min.js';
+    <script>
         const ymdDate = '2012-04-12 10:03:15';
         const gmtDate = new Date();
         let ymdResult = xqtime.friend(ymdDate);
